core/iccprofile: don't crash if permission errors occur

The version of std::filesytem::exists without an error code throws an exception if an OS error
of any kind happens.

Instead of trying to guess why lcms failed to open the profile, this commit ports it to ::fopen
the file directly and pass that to lcms.

BUG: 498861